# bundle-platform

./: .gitignore  pyproject.toml
docs/: DEPLOYMENT.md  MODELS.md
docs/superpowers/plans/: 2026-04-18-phase2-ingestion-engine-kvm.md  2026-04-18-phase2a-eval-framework.md
docs/superpowers/specs/: 2026-04-18-phase2-ingestion-engine-kvm.md  2026-04-18-phase2a-eval-framework.md
eval/golden/esxi/: esxi_001_storage_error.yaml  esxi_002_psod.yaml  esxi_003_vm_crash.yaml
eval/golden/kvm/: kvm_001_migration_failure.yaml  kvm_002_vm_oom.yaml  kvm_003_storage_io_error.yaml
src/bundle_platform/agent/: accounting.py  loop.py
src/bundle_platform/eval/: __init__.py  cli.py  golden.py  metrics.py  report.py  runner.py  strategy.py
src/bundle_platform/llm/: __init__.py  anthropic_direct.py  azure.py  bedrock.py  client.py  vertex.py
tests/agent/: test_accounting.py  test_loop.py
tests/eval/: test_baseline_strategy.py  test_cli.py  test_combined.py  test_golden.py  test_metrics.py  test_report.py  test_runner.py  test_strategy.py  test_with_dedup.py  test_with_drain3.py  test_with_rerank.py
tests/integration/: test_contract_smoke.py
tests/llm/: test_anthropic_direct.py  test_azure.py  test_bedrock.py  test_client.py  test_factory.py  test_vertex.py
tests/parsers/: test_base.py  test_detect.py  test_esxi.py  test_rhel.py
tests/pipeline/: test_chunker.py  test_deduplicator.py  test_exceptions.py  test_reranker.py  test_template_miner.py
tests/shared/: test_caps.py  test_timestamps.py
tests/tools/: test_analysis.py  test_config_reader.py  test_generic.py
(+30 files in other folders)
