[project]
name = "bundle-platform"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anthropic==0.94.0",
    "fastembed==0.8.0",
    "python-dotenv==1.2.2",
    "drain3>=0.9.11",
    "pyyaml>=6.0.3",
    "qdrant-client==1.17.1",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
bundle-platform-eval = "bundle_platform.eval.cli:main"

[project.optional-dependencies]
bedrock = ["anthropic[bedrock]==0.94.0", "boto3>=1.34.0"]
vertex = ["anthropic[vertex]==0.94.0"]
azure = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.10",
    "ty==0.0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bundle_platform"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
